--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    watch the flashing triangles
+		    don't stare at the flashing triangles
 	    </footer>
 	</body>
 </html>
